--- a/BaiTap2/QuanLyNhaO.csproj
+++ b/BaiTap2/QuanLyNhaO.csproj
@@ -115,6 +115,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Default.aspx" />
+    <Content Include="Images\Logo.png" />
+    <Content Include="Images\MyWebGis.ico" />
+    <Content Include="Site1.Master" />
+    <Content Include="Slides\img1.webp" />
+    <Content Include="Slides\img2.webp" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -123,12 +129,32 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Slides\img1.jpg" />
+    <Content Include="Slides\img2.jpg" />
+    <Content Include="Slides\img3.jpg" />
+    <Content Include="Styles\MyStyle.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Objects\DataAccess.cs" />
+    <Compile Include="Objects\Point.cs" />
+    <Compile Include="Objects\Line.cs" />
     <Compile Include="Objects\Polygon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Site1.Master.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Site1.Master.designer.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
